--- a/index.html
+++ b/index.html
@@ -4,31 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modul 1 HTML</title>
-</head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css" integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./CSS/styles.css" />
 <body>
     <header>
-     <a href="index.html">
+        <nav class="header-nav">
+     <a href="index.html" class="logo">
         <img src="IMAGES/barbershop.logo" alt="Barbershop logo" width="68.93" height="55.46">
 
      </a>
 
-     <nav>
-        <ul>
-            <li> <a href="#">About</a> </li>
-            <li> <a href="#">Services and Prices</a> </li>
-            <li> <a href="#">Barbers</a> </li>
-            <li> <a href="#">Contacts</a> </li>
+     
+        <ul class="header-list">
+            <li class="header-item"> <a href="#" class="header-link-active">About</a> </li>
+            <li class="header-item"> <a href="#" class="header-link">Services and Prices</a> </li>
+            <li class="header-item" > <a href="#" class="header-link">Barbers</a> </li>
+            <li class="header-item"> <a href="#" class="header-link">Contacts</a> </li>
         </ul>
      </nav>
-     <a href="+38 044 111 11 11"> +38 044 111 11 11</a>
-     <a href="https://goit.global/ro/contacts/" target="_blank">Book Service</a>
+     <a href="+38 044 111 11 11" class="header-link"> +38 044 111 11 11</a>
+     <a href="https://goit.global/ro/contacts/" target="_blank" class="primary-button">Book Service</a>
     </header>
     <main>
-        <section>
+        <section class="hero-section">
             <hr />
-            <span>A hair salon for men in Kyiv</span>
-            <h1>BarberShop</h1>
-            <p>
+            <span class="hero-subtitle">A hair salon for men in Kyiv</span>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-description">
                 We are experts in trendy men's haircuts.
                 We work quickly, carefully, and tastefully.
             </p>
@@ -40,7 +47,7 @@
             <span>
                 <img src="IMAGES/Rectangle 5.png" alt="Horizontal line"> About
             </span>
-                <h1>The Best Barbershop in Your City</h1>
+                <h2>The Best Barbershop in Your City</h2>
                 <h3>If you want to add more confidence to your image, you are definitely in the right place.</h3>
                 <p>We are a team that never rests on its laurels and yearns for change. And once you fall into the hands of our master, you will never be the same again. We are a team that is always on the same wavelength with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
                 <button type="button">Book a service</button>
