--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 <button class="primary-button text-grey">Book a service</button>
             </div>
         </section>
-        <section class="services-section">
+        <section class="services-section section">
+            <div class="container">
             <span class="section-subtitle" ><img src="IMAGES/Rectangle 5.png" alt="Horizontal line">Spend time in the company of the best craftsmen</span>
             <h2 class="section-title">Services and Prices</h2>
             <ul>
@@ -83,8 +84,10 @@
                 <li><span>Gray Coverage</span><span>from 200 UAH</span></li>
             </ul>
             <button type="button">Book a Service</button>
+        </div>
         </section>
-        <section>
+        <section class="section">
+            <div class="container">
             <ul>
                 <li>600 <sup>+</sup></li>
                 <li>50<sup>+</sup></li>
@@ -94,8 +97,10 @@
             <span>Old school</span>
             <h2>Why do they come to us?</h2>
             <p>Only good things are said about us. But it is better to see and feel 1 time than to read 10 times. </p>
+            </div>
         </section>
-        <section>
+        <section class="section">
+            <div class="container">
             <span>for true connoisseurs of the atmosphere</span>
             <h2>Our Barbers </h2>
             <ul>
@@ -115,8 +120,10 @@
                     <p>Extreme Barber</p>
                 </li>
             </ul>
+        </div>
         </section>
-        <section>
+        <section class="section">
+            <div class="container">
             <span>In Latin, "barba" means "beard"</span>
             <ul>
                 <li><img src="IMAGES/serv-trim.png" alt="Photo trim service"></li>
@@ -124,14 +131,17 @@
                 <li><img src="IMAGES/serv-masage.png" alt="Photo face massage service"></li>
                 <li><img src="IMAGES/serv-fade.png" alt="Photo fade service"></li>
             </ul>
+            </div>
         </section>
-        <section>
+        <section class="section">
+            <div class="container">
             <h2>Contacts</h2>
             <address>
                 Main Street, 7A Kyiv, 08132 <br/>
                 +38 044 111 11 11 <br/>
                 barbershop@email.com <br/>
             </address>
+        </div>
         </section>
     </main>
     <footer>
