--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
         </section>
     </main>
     <footer>
+        <div class="container">
         <span>Copyright 2022</span>
         <span>Instagram</span>
         <span>YouTube</span>
+    </div>
     </footer>
 </body>
 </html>
