--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
             <li class="header-item "> <a href="#" class="header-link list">Contacts</a> </li>
         </ul>
      </nav>
+         <address class="header-address">
      <a href="+38 044 111 11 11" class="header-link"> +38 044 111 11 11</a>
      <button class="primary-button">Book Service</button>
+         </address>
+
     </div>
     </header>
     <main>
@@ -53,10 +56,13 @@
             </p>
         </section>
         <section class="about-section section">
-            <div class="container">
+            <div class="about-container container">
+                <div class="about-images-container">
             <img src="IMAGES/about img1.png" alt="First Service" width="270" height="445">
             <img src="IMAGES/about img2.png" alt="Second Service" width="270" height="445">
-       
+              </div>
+
+              <div class="about-text-container">
             <span class="section-subtitle text-grey">
                 <img src="IMAGES/Rectangle 5.png" alt="Horizontal line"> About
             </span>
@@ -64,6 +70,7 @@
                 <h3 class="section-description">If you want to add more confidence to your image, you are definitely in the right place.</h3>
                 <p class="section-paragraph">We are a team that never rests on its laurels and yearns for change. And once you fall into the hands of our master, you will never be the same again. We are a team that is always on the same wavelength with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
                 <button class="primary-button text-grey">Book a service</button>
+            </div>
             </div>
         </section>
         <section class="services-section section">
